--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -17,7 +17,7 @@
     "typeRoots": ["./node_modules/@types", "./src/types"]
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"],
+  "exclude": ["node_modules", "dist", "src/__tests__"],
   "ts-node": {
     "files": true
   }
