Updated render.yaml file

--- a/render.yaml
+++ b/render.yaml
@@ -6,6 +6,6 @@ services:
     plan: free
     branch: main
     rootDir: frontend
-    buildCommand: npm install -f && npm run build
+    buildCommand: npm install --legacy-peer-deps && npm run build
     publishPath: build
     autoDeploy: true
